--- a/src/backend/BuildingBlocks/BuildingBlocks.Core/BuildingBlocks.Core.csproj
+++ b/src/backend/BuildingBlocks/BuildingBlocks.Core/BuildingBlocks.Core.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="MediatR" Version="13.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.0" />
   </ItemGroup>
 
 </Project>
