--- a/src/backend/Services/Catalog/Catalog.API/Catalog.API.csproj
+++ b/src/backend/Services/Catalog/Catalog.API/Catalog.API.csproj
@@ -31,4 +31,6 @@
     <Folder Include="Endpoints\" />
   </ItemGroup>
 
+  <ProjectExtensions><VisualStudio><UserProperties appsettings_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
+
 </Project>
