--- a/src/backend/Services/Catalog/Catalog.Application/Catalog.Application.csproj
+++ b/src/backend/Services/Catalog/Catalog.Application/Catalog.Application.csproj
@@ -17,4 +17,8 @@
     <ProjectReference Include="..\Catalog.Domain\Catalog.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="CQRS\Products\Queries\GetProduct\" />
+  </ItemGroup>
+
 </Project>
