chore(catalog): chore

--- a/src/backend/Services/Catalog/Catalog.API/appsettings.json
+++ b/src/backend/Services/Catalog/Catalog.API/appsettings.json
@@ -18,5 +18,9 @@
       } // Cổng Ingestion của Seq
     ]
   },
+  "Swagger": {
+    "Title": "Catalog API",
+    "Version": "v1"
+  },
   "AllowedHosts": "*"
 }
