--- a/src/backend/BuildingBlocks/BuildingBlocks.Core/BuildingBlocks.Core.csproj
+++ b/src/backend/BuildingBlocks/BuildingBlocks.Core/BuildingBlocks.Core.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="Mapster.DependencyInjection" Version="1.0.1" />
     <PackageReference Include="MediatR" Version="13.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="8.0.0" />
   </ItemGroup>
 
 </Project>
