--- a/src/backend/Services/Identity/Identity.API/Identity.API.csproj
+++ b/src/backend/Services/Identity/Identity.API/Identity.API.csproj
@@ -20,4 +20,8 @@
     <ProjectReference Include="..\Identity.Infrastructure\Identity.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Common\Mappings\" />
+  </ItemGroup>
+
 </Project>
