feat(catalog): Implement Create, Update , Get, GetById Category API

--- a/src/backend/Services/Catalog/Catalog.API/appsettings.json
+++ b/src/backend/Services/Catalog/Catalog.API/appsettings.json
@@ -22,5 +22,12 @@
     "Title": "Catalog API",
     "Version": "v1"
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JwtSettings": {
+    "Secret": "579fd43c3c8ae33d285f32d51e1ef97e",
+    "Issuer": "IdentityService",
+    "Audience": "EcommerceClient"
+  },
+  "AllowedOrigins": [
+  ]
 }
