feat(building-blocks): Messaging and Ward Enums

--- a/src/backend/Services/Basket/Basket.API/appsettings.json
+++ b/src/backend/Services/Basket/Basket.API/appsettings.json
@@ -8,6 +8,10 @@
   "ConnectionStrings": {
     "Redis": "localhost:6379"
   },
+  "Swagger": {
+    "Title": "Basket API",
+    "Version": "v1"
+  },
   "AllowedHosts": "*",
   "Serilog": {
     "WriteTo": [
@@ -27,5 +31,7 @@
     "Secret": "579fd43c3c8ae33d285f32d51e1ef97e",
     "Issuer": "IdentityService",
     "Audience": "EcommerceClient"
-  }
+  },
+  "AllowedOrigins": [
+  ]
 }
